--- a/01-test.yaml
+++ b/01-test.yaml
@@ -1,6 +1,7 @@
 ---
--hosts: all
- become: true
- tasks: 
-  -name: ensure apache is at the latest version 
-   dnf: name=httpd state=latest
+- name: checking latest version
+  hosts: all
+  become: true
+  tasks: 
+   - name: ensure apache is at the latest version 
+     dnf: name=httpd state=latest
