--- a/users.yaml
+++ b/users.yaml
@@ -2,9 +2,9 @@
 - name: add users
   hosts: all
   user:
-   name: "{{ item }}"
-   state: present
-   groups: "users"
+   - name: "{{ item }}"
+     state: present
+     groups: "users"
   loop:
      - linux
      - ansible
