--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -6,8 +6,7 @@
     ansible.builtin.package:
       name: nginx
       state: present
-
   - name: starting nginx
     ansible.builtin.service:
-     name: ngnix
-     state: started
+      name: nginx
+      state: started
