--- a/03-nginx.yaml
+++ b/03-nginx.yaml
@@ -1,6 +1,7 @@
 ---
 - name: installing and starting nginx server
   hosts: all
+  become: yes
   tasks:
   - name: Installing nginx
     ansible.builtin.package:
