--- a/04-multi-play.yaml
+++ b/04-multi-play.yaml
@@ -8,7 +8,7 @@
       msg: "Hello Play1 and TASK1"
 
 - name: PLAY2
-  hosts: local
+  hosts: web
   connection: local
   tasks:
   - name: printing play2 and task2
