--- a/05-vars.yaml
+++ b/05-vars.yaml
@@ -9,4 +9,4 @@
   tasks:
   - name: print the Variables
     ansible.builtin.debug:
-      msg: "Course is "{{COURSE}}"", Duration is "{{DURATION}}", Trainer is "{{TRAINER}}"" 
+      msg: "Course is {{ COURSE }}, Duration is {{ DURATION }}, Trainer is {{ TRAINER }}"
