--- a/06-task-vars.yaml
+++ b/06-task-vars.yaml
@@ -12,3 +12,7 @@
       COURSE: Ansible
     ansible.builtin.debug:
       msg: "Course is {{ COURSE }}, Duration is {{ DURATION }}, Trainer is {{ TRAINER }}"
+
+  - name: print the Variables1
+    ansible.builtin.debug:
+      msg: "Course is {{ COURSE }}, Duration is {{ DURATION }}, Trainer is {{ TRAINER }}"
