--- a/08-vars-promp.yaml
+++ b/08-vars-promp.yaml
@@ -11,6 +11,6 @@
     prompt: please enter the trainer name
      
   tasks:
-  - name: printing variable from prompt
+  - name: printing values from prompt
     ansible.builtin.debug:
       msg: "Course is {{ COURSE }}, Duration is {{ DURATION }}, Trainer is {{ TRAINER }}"
