--- a/08-vars-promp.yaml
+++ b/08-vars-promp.yaml
@@ -8,7 +8,7 @@
   - name: DURATION
     prompt: please enter the duration
   - name: Trainer
-    prompt: please enter the trainer name
+    prompt: please enter the Trainer name
      
   tasks:
   - name: printing values from prompt
