--- a/08-vars-promp.yaml
+++ b/08-vars-promp.yaml
@@ -7,10 +7,8 @@
     prompt: please enter the name of the course
   - name: DURATION
     prompt: please enter the duration
-  - name: Trainer
-    prompt: please enter the Trainer name
-     
+
   tasks:
   - name: printing values from prompt
     ansible.builtin.debug:
-      msg: "Course is {{ COURSE }}, Duration is {{ DURATION }}, Trainer is {{ TRAINER }}"
+      msg: "Course is {{ COURSE }}, Duration is {{ DURATION }}"
