--- a/08-vars-promp.yaml
+++ b/08-vars-promp.yaml
@@ -5,11 +5,13 @@
   vars_prompt:
   - name: COURSE
     prompt: please enter the name of the course
+    private: false
   - name: DURATION
     prompt: please enter the duration
+    private: false
   - name: TRAINER
     prompt: please enter the trainer name
-
+    private: false
   tasks:
   - name: printing values from prompt
     ansible.builtin.debug:
