--- a/inventory.ini
+++ b/inventory.ini
@@ -2,13 +2,13 @@
 
 
 [web]
-172.31.91.120
-
+172.31.91.120 COURSE=spoken english DURATION=45 days TRAINER=Rani
+localhost COURSE=Ansible DURATION=30 days TRAINER=sivakumar
 
 [local]
 localhost 
 
-[all:vars]
+[local:vars]
 COURSE=linux
 DURATION=30 days
 TRAINER=Bhaskar reddy
