--- a/inventory.ini
+++ b/inventory.ini
@@ -2,7 +2,7 @@
 
 
 [web]
-172.31.91.120 COURSE=spoken english DURATION=45 days TRAINER=Rani
+172.31.91.120 COURSE=spoken english DURATION=45 days TRAINER=Rani ansible_user=ec2-user ansible_password=DevOps321
 localhost COURSE=Ansible DURATION=30 days TRAINER=sivakumar
 
 [local]
