--- a/inventory.ini
+++ b/inventory.ini
@@ -2,13 +2,14 @@
 
 
 [web]
-172.31.91.120 COURSE=spoken english DURATION=45 days TRAINER=Rani ansible_user=ec2-user ansible_password=DevOps321
-localhost COURSE=Ansible DURATION=30 days TRAINER=sivakumar ansible_user=ec2-user ansible_password=DevOps321
+172.31.91.120 
+localhost
+
 
 [local]
 localhost 
 
-[local:vars]
-COURSE=linux
-DURATION=30 days
-TRAINER=Bhaskar reddy
+; [local:vars]
+; COURSE=linux
+; DURATION=30 days
+; TRAINER=Bhaskar reddy
