--- a/10-vars-args.yaml
+++ b/10-vars-args.yaml
@@ -1,6 +1,6 @@
 ---
-- name: Printing Variables
-  hosts: web
+- name: Variables
+  hosts: local
   tasks:
   - name: print the Variables
     ansible.builtin.debug:
