--- a/18-facts.yaml
+++ b/18-facts.yaml
@@ -3,5 +3,5 @@
   hosts: web
   tasks:
   - name: print the facts
-    ansible.buitin.debug:
+    ansible.builtin.debug:
       msg: "{{ ansible_facts }}"
