--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -8,3 +8,11 @@
     ansible.builtin.debug:
       msg: "Fruits are {{ fruits | split(',') }}"
       
+  - name: convert map into list
+    vars:
+      course: 
+        name: linux
+        duration: 10 days
+        trainer: siva
+    ansible.builtin.debug:
+      msg: "Course info: {{ course | dict2item }}"
