--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -16,3 +16,9 @@
         trainer: siva
     ansible.builtin.debug:
       msg: "Course info: {{ course | dict2items }}"
+
+  - name: convert lower course-name
+    vars:
+     name: G. Latha BHAskar 
+    ansible.builting.debug:
+     msg: "Hello {{ name | lower }}"
