--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -17,8 +17,8 @@
     ansible.builtin.debug:
       msg: "Course info: {{ course | dict2items }}"
 
-  - name: convert lower course-name
+  - name: convert lower case 
     vars:
-     name: G. Latha BHAskar 
-    ansible.builting.debug:
+      name: "G. Latha BHAskar" 
+    ansible.builtin.debug:
      msg: "Hello {{ name | lower }}"
