--- a/17-filters.yaml
+++ b/17-filters.yaml
@@ -22,3 +22,9 @@
       name: "G. Latha BHAskar" 
     ansible.builtin.debug:
      msg: "Hello {{ name | lower }}"
+
+ - name: convert Upper case 
+   vars:
+     name: "G. Latha BHAskar" 
+   ansible.builtin.debug:
+    msg: "Hello {{ name | upper }}"
