--- a/mysql.yaml
+++ b/mysql.yaml
@@ -13,3 +13,14 @@
       name: mysqld
       state: started
       enabled: yes
+
+  - name: connect to mysql server
+    community.mysql.mysql_info:
+      login_user: root
+      login_password: ExpenseApp@1
+      login_host: mysql.devopspractice.online
+    register: mysql_info 
+
+  - name: print the mysql_info output
+    ansible.builtin.debug:
+      msg: "mysql information: {{ mysql_info }}"
