--- a/mysql.yaml
+++ b/mysql.yaml
@@ -3,6 +3,11 @@
   hosts: mysql
   become: yes
   tasks: 
+  - name: install mysql libraries
+    ansible.builtin.pip:
+      name: PyMySQL
+      executable: pip3.9
+
   - name: installing mysql-server
     ansible.builtin.package:
       name: mysql-server
