--- a/mysql.yaml
+++ b/mysql.yaml
@@ -25,7 +25,8 @@
       login_password: ExpenseApp@1
       login_host: mysql.devopspractice.online
     register: mysql_info 
-
+    ignore_errors: true
+    
   - name: print the mysql_info output
     ansible.builtin.debug:
       msg: "mysql information: {{ mysql_info }}"
