--- a/mysql.yaml
+++ b/mysql.yaml
@@ -5,7 +5,7 @@
   tasks: 
   - name: install mysql libraries
     ansible.builtin.pip:
-      name: {{ item }}
+      name: "{{ item }}"
       executable: pip3.9
     loop:
     - cryptography
