--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,11 @@
 [mysql]
-172.31.86.253
+mysql.devopspractice.online
+
+[backend]
+backend.devopspractice.online
+
+[frontend]
+frontend.devopspractice.online
 
 
 
