--- a/.vscode/backend.yaml
+++ b/.vscode/backend.yaml
@@ -8,3 +8,8 @@
 
   - name: enable nodejs module
     ansible.builtin.command: dnf module enable nodejs:20 -y
+
+  - name: install nodejs
+    ansible.builtin.package:
+      name: nodejs
+      state: present
