--- a/backend.yaml
+++ b/backend.yaml
@@ -6,7 +6,7 @@
   - name: disable current nodejs module
     ansible.builtin.command: dnf module disable nodejs -y
 
-  - name: enable nodejs module
+  - name: enable nodejs 20 module
     ansible.builtin.command: dnf module enable nodejs:20 -y
 
   - name: install nodejs
