--- a/backend.yaml
+++ b/backend.yaml
@@ -1,7 +1,7 @@
 ---
 - name: configure backend server
   hosts: backend
-  bcecome: yes
+  become: yes
   tasks:
   - name: disable current nodejs module
     ansible.builtin.command: dnf module disable nodejs -y
