--- a/backend.yaml
+++ b/backend.yaml
@@ -17,3 +17,18 @@
   - name: create expence user
     ansible.builtin.user:
       name: expence
+
+  - name: create directory
+    ansible.builtin.file:
+      path: /app
+      state: directory
+
+  - name: download the code into created directory
+    ansible.builtin.get_url:
+    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+    dest: /tmp/backend.zip
+
+  - name: unzip the code
+    ansible.builtin.unarchive:
+    src: /tmp/backend.zip
+    dest: /app
