--- a/backend.yaml
+++ b/backend.yaml
@@ -24,8 +24,7 @@
       state: directory
 
   - name: download the code into created directory
-    ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+    ansible.builtin.get_url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
     dest: /tmp/backend.zip
 
   - name: unzip the code
