--- a/backend.yaml
+++ b/backend.yaml
@@ -47,7 +47,7 @@
      dest: /etc/systemd/system/backend.service
  
   - name: import mysql data
-    community.mysql.mysql.db:
+    community.mysql.mysql_db:
       state: import
       name: all
       login_user: root
