--- a/backend.yaml
+++ b/backend.yaml
@@ -45,6 +45,11 @@
     ansible.builtin.copy:
      src: backend.service
      dest: /etc/systemd/system/backend.service
+
+  - name: install python libraries
+    ansible.builtin.pip:
+      name: PyMySQL
+      executable: pip3.9
  
   - name: import mysql data
     community.mysql.mysql_db:
