--- a/backend.yaml
+++ b/backend.yaml
@@ -48,9 +48,12 @@
 
   - name: install python libraries
     ansible.builtin.pip:
-      name: PyMySQL
+      name: "{{ item }}"
       executable: pip3.9
- 
+    loop:
+    - PyMySQL
+    - cryptography
+     
   - name: import mysql data
     community.mysql.mysql_db:
       state: import
