--- a/backend.yaml
+++ b/backend.yaml
@@ -67,7 +67,7 @@
     ansible.builtin.systemd_service:
      enabled: true
      state: restarted
-     demon_reload: true
+     daemon_reload: true
      name: backend
  
  
