--- a/01-test.yaml
+++ b/01-test.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Checking latest versions of httpd and mariadb
+- name: Checking latest versions of httpd
   hosts: all
   become: true
   tasks:
