--- a/04-practice.yaml
+++ b/04-practice.yaml
@@ -13,12 +13,8 @@
       name: "{{ item }}"
       state: present
       groups: "users"
-    loop:
-      - latha
-      - bhaskar
-      - nirshan
-      - ranhitha
-
+    loop: "{{ users }}"
+      
 
 
 
