--- a/04-practice.yaml
+++ b/04-practice.yaml
@@ -1,8 +1,10 @@
 ---
 - name: create 4 Users 
   hosts: all
-  become: true
-  tasks: 
+  become: true 
+  vars_files:
+   - vars.yaml
+- tasks:
   - name: Ensure 'users' group exists
     ansible.builtin.group:
      name: users
