--- a/backend.yaml
+++ b/backend.yaml
@@ -17,9 +17,9 @@
     - nodejs
     - mysql
 
-  - name: create expence user
+  - name: create expense user
     ansible.builtin.user:
-      name: expence
+      name: expense
 
   - name: create directory
     ansible.builtin.file:
