--- a/frontend.yaml
+++ b/frontend.yaml
@@ -13,3 +13,13 @@
       name: nginx
       enabled: yes
       state: started
+
+  - name: Deletes directory
+    ansible.builtin.file:
+       path: /usr/share/nginx/html
+       state: absent 
+
+  - name: creats html directory
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: directory
