--- a/frontend.yaml
+++ b/frontend.yaml
@@ -23,3 +23,8 @@
     ansible.builtin.file:
       path: /usr/share/nginx/html
       state: directory
+
+  - name: Download the frontend code
+    ansible.builtin.get_url:
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+      dest: /tmp/frontend.zip
